--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: scilus/nf-pediatric
+          repository: scilus/sf-pediatric
           ref: ${{ github.event.pull_request.head.sha || 'main' }}
           fetch-depth: 0  # Shallow clones should be disabled for a version bump to work
 
@@ -55,12 +55,11 @@ jobs:
           nf-core pipelines schema docs -o parameters.md -x markdown
           echo '' | cat - parameters.md > temp && mv temp parameters.md
           echo '---' | cat - parameters.md > temp && mv temp parameters.md
-          echo 'description: nf-pediatric parameters' | cat - parameters.md > temp && mv temp parameters.md
+          echo 'description: sf-pediatric parameters' | cat - parameters.md > temp && mv temp parameters.md
           echo 'title: Pipeline Parameters' | cat - parameters.md > temp && mv temp parameters.md
           echo '---' | cat - parameters.md > temp && mv temp parameters.md
           sed -E -i 's/^## (.*)$/### **\1**/' parameters.md
-          sed -E -i '/^# scilus\/nf-pediatric pipeline parameters$/,/^nf-pediatric is a neuroimaging pipeline to process pediatric MRI data \(dMRI, and sMRI\) ranging from 0-18 years old\.$/d' parameters.md
-
+          sed -E -i '/^# scilus\/sf-pediatric pipeline parameters$/,/^sf-pediatric is a neuroimaging pipeline to process pediatric MRI data \(dMRI, and sMRI\) ranging from 0-18 years old\.$/d' parameters.md
       - name: Pack into artifacts
         uses: actions/upload-artifact@v4
         with:
